# discord-link-sender

./: .gitignore  Cargo.toml  config.toml  readme.md
src/: app.rs  bot.rs  main.rs
