[package]
name = "discord-link-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"] }
eframe = "0.28.1"
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }
clipboard-win = "4.5.0"
itertools = "0.10.5"
